--- a/api-rest/src/main/resources/application-container.properties
+++ b/api-rest/src/main/resources/application-container.properties
@@ -1,5 +1,5 @@
 ## Database Properties
-spring.datasource.url = jdbc:mysql://localhost:3306/userdb?useSSL=false
+spring.datasource.url = jdbc:mysql://api-rest-database:3306/userdb?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = betha123
 
