--- a/api-rest/Dockerfile
+++ b/api-rest/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:10-jre-slim
-COPY /target/api-rest-0.0.1-SNAPSHOT.jar /usr/src/app/
+COPY /target/api-rest-1.0.jar /usr/src/app/
 WORKDIR /usr/src/app
 EXPOSE 8080
-CMD ["java", "-jar", "api-rest-0.0.1-SNAPSHOT.jar"]
+CMD ["java", "-jar", "api-rest-1.0.jar"]
