--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,10 @@ services:
         container_name: api-rest-database
         image: mysql:5.6
         environment:
-            - MYSQL_ROOT_PASSWORD=betha123
-            - MYSQL_DATABASE=userdb
+            - MYSQL_ROOT_PASSWORD=root
+            - MYSQL_DATABASE=database_user
+            - MYSQL_USER=betha
+            - MYSQL_PASSWORD=betha
         volumes:
             - data:/var/lib/mysql
         network_mode: "host"
@@ -20,23 +22,25 @@ services:
             dockerfile: Dockerfile
         volumes:
             - /data/springboot
+        environment:
+            - Dspring.profiles.active=container
         depends_on: 
             - api-rest-database
         network_mode: "host"
 
-   # api-rest-angular:
-   #     container_name: api-rest-angular
-   #     image: angular
-   #     build:
-   #         context: ./frontend
-   #         dockerfile: ./Dockerfile
-   #     volumes:
-   #         - /data/angular
-   #     depends_on: 
-   #         - api-rest-spring
-   #     ports:
-   #         - "4200:4200"
-   #     network_mode: "host"
+    # api-rest-angular:
+    #    container_name: api-rest-angular
+    #    image: angular
+    #    build:
+    #        context: ./frontend
+    #        dockerfile: ./Dockerfile
+    #    volumes:
+    #        - /data/angular
+    #    depends_on: 
+    #        - api-rest-spring
+    #    ports:
+    #        - "4200:4200"
+    #    network_mode: "host"
 
 volumes:
     data:
